--- a/public/back/login.html
+++ b/public/back/login.html
@@ -5,8 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>登陆</title>
+    <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
+    <link rel="stylesheet" href="./css/common.css">
 </head>
-<body>
-    我是登陆页
+<body class="body_bgc">
+    <div class="container login">
+        <div class="col-lg-4 col-lg-offset-4">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    <h3 class="panel-title">后台管理系统</h3>
+                </div>
+                <div class="panel-body">
+                    <form class="form-horizontal" id="form">
+                        <div class="form-group">
+                            <label for="username" class="col-sm-3 control-label">用户名:</label>
+                            <div class="col-sm-9 row">
+                            <input type="text" class="form-control" name="username" id="username" placeholder="请输入用户名"">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="password" class="col-sm-3 control-label">密　码:</label>
+                            <div class="col-sm-9 row">
+                            <input type="password" class="form-control" name="password" id="password" placeholder="请输入密码">
+                            </div>
+                        </div>
+                       
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10 col-lg-8 col-lg-offset-3">
+                            <button type="reset" class="btn btn-default pull-left row">重置</button>
+                            <button type="submit" class="btn btn-primary pull-right row">登录</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <script src="./lib/jquery/jquery.js"></script>
+    <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 </html>
