--- a/public/back/login.html
+++ b/public/back/login.html
@@ -33,7 +33,7 @@
                        
                         <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10 col-lg-8 col-lg-offset-3">
-                            <button type="reset" class="btn btn-default pull-left row">重置</button>
+                            <button type="reset" class="btn btn-default pull-left row" id="reset">重置</button>
                             <button type="submit" class="btn btn-primary pull-right row">登录</button>
                             </div>
                         </div>
